@@ -1,10 +1,10 @@
-#       Programmer:     limodou
-#       E-mail:         limodou@gmail.com
-#
-#       Copyleft 2006 limodou
-#
-#       Distributed under the terms of the GPL (GNU Public License)
-#
+#   Programmer:     limodou
+#   E-mail:         limodou@gmail.com
+#  
+#   Copyleft 2006 limodou
+#  
+#   Distributed under the terms of the GPL (GNU Public License)
+#  
 #   UliPad is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as published by
 #   the Free Software Foundation; either version 2 of the License, or
@@ -19,7 +19,7 @@
 #   along with this program; if not, write to the Free Software
 #   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
-#       $Id: ScriptDialog.py 1731 2006-11-22 03:35:50Z limodou $
+#   $Id: ScriptDialog.py 1731 2006-11-22 03:35:50Z limodou $
 
 import wx
 from modules import makemenu
